@@ -54,6 +54,7 @@ class EngineAbortException(EngineException):
     Raised on user abort.
     """
     def __init__(self, kill):
+        EngineException.__init__(self)
         self.kill = kill
 
 class EngineTimeoutException(EngineException):
@@ -75,6 +76,9 @@ class EngineNotSupportedError(EngineException):
     """
     Error raised when the engine mechanism is not supported.
     """
+    def __init__(self, engineid):
+        EngineException.__init__(self)
+        self.engineid = engineid
 
 
 class EngineBaseTimer:
