@@ -1,3 +1,9 @@
+2011-02-07 S. Thiell <stephane.thiell@cea.fr>
+
+	* CLI/OptionParser.py: Add clush -E <engine> hidden option to enforce a
+	specific I/O events engine (should not be needed, but can be useful for
+	testing). Improve engine selection error handling.
+
 2011-02-06 S. Thiell <stephane.thiell@cea.fr>
 
 	* Engine/Select.py: New select()-based engine (from H. Doreau, ticket #8).
